# WE

./: .env.example  .gitignore  README.md  pyproject.toml
infra/: common-services.yml  default.conf  docker-compose.dev.yml
requirements/: dev.txt  prod.txt
src/backend/: manage.py
src/backend/WEB_social_network/: asgi.py  settings.py  tokenauth_middleware.py  urls.py  wsgi.py
src/backend/chat/: api_views.py  consumers.py  models.py  serializers.py  services.py  urls.py
src/backend/chat/migrations/: 0001_initial.py  0002_alter_message_conversation.py
src/backend/communities/: admin.py  api_views.py  models.py  permissions.py  serializers.py  services.py  urls.py
src/backend/communities/migrations/: 0001_initial.py  0002_alter_community_avatar.py  0003_alter_community_creator_alter_community_followers.py
src/backend/posts/: admin.py  api_views.py  models.py  permissions.py  serializers.py  services.py  urls.py
src/backend/posts/migrations/: 0001_initial.py  0002_alter_post_options_post_publish_date_and_more.py  0003_alter_post_author_alter_post_communities_and_more.py  0004_alter_post_communities_alter_post_likes.py
src/backend/templates/email/: password_reset_email.html
src/backend/users/: admin.py  api_views.py  constants.py  models.py  permissions.py  serializers.py  services.py  signals.py  urls.py
src/backend/users/migrations/: 0001_initial.py  0002_alter_user_options_user_age_user_avatar_and_more.py  0002_group.py  0003_alter_group_options_alter_user_options.py  0003_remove_user_friends.py  0003_rename_friends_friendship_users_and_more.py  (+15 more)
